<resources>
    <string name="app_name">WhyWait</string>
    <string name="btn_LoginBackendless">Log in</string>
    <string name="btn_LogoutBackendless">Logout from Backendless</string>
    <string name="btn_LoginFacebook">Login in Facebook</string>
    <string name="btn_LoginGooglePlus">Login in GooglePlus</string>
    <string name="btn_LoginTwitter">Login in Twitter</string>

    <string name="textView_BackendlessUserInfo">Backendless User info.</string>
    <string name="editText_BackendlessUserInfo">You should login as Backendless user first.</string>

    <string name="register_text">Register</string>
    <string name="restore_link">Restore</string>
    <string name="login_prompt">Login:</string>
    <string name="password_prompt">Password:</string>
    <string name="password_recovery_page_name">Password Recovery</string>
    <string name="remember_login_text">Remember me</string>

    <string name="ownerId_field_prompt">OwnerId:</string>
    <string name="email_field_prompt">Email:</string>
    <string name="objectId_field_prompt">ObjectId:</string>
    <string name="created_field_prompt">Created:</string>
    <string name="password_field_prompt">Password:</string>
    <string name="updated_field_prompt">Updated:</string>
    <string name="name_field_prompt">Name:</string>
    <string name="file_field_prompt">File:</string>
    <string name="registration_success">Registered successfully!</string>
    <string name="registration_error">Registration error!</string>

    <string name="restore_password_page_name">Password Restoration</string>
    <string name="password_recovered_message">We sent an email to your email address with a link to a password change page. Please check your email and follow the link for further instructions.</string>
    <string name="registration_page_name">Registration</string>
    <string name="registration_success_message">Thank you for registering with the %1$s.</string>


    <!-- __________ change this credentials and configure your applications __________ -->
    <!-- You also need to set android debug key in Facebook and Google apps -->

    <!-- for Facebook -->
    <!-- https://developers.facebook.com/docs/facebook-login/android -->
    <string name="facebook_app_id">929097247249542</string>
    <string name="fb_login_protocol_scheme">fb929097247249542</string>

    <!-- for Google -->
    <!-- https://developers.google.com/identity/sign-in/android/start-integrating -->
    <string name="gp_WebApp_ClientId">452410872924-rrmkmd4q5dlm2sdt1c50tdcvnr7vn4ro.apps.googleusercontent.com
</string>
    <string name="gp_WebApp_ClientSecret">abBGhMEoiD09YoOHdMrXKQuD
</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>
    <!-- __________ end __________ -->

</resources>
