<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:id="@+id/activity_login_with_backendless"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@drawable/popbg"
		tools:context=".MainLogin">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_alignParentStart="true"
		android:layout_alignParentTop="true"
		android:orientation="vertical">


		<TableLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:shrinkColumns="*"
			android:stretchColumns="*">

			<TableRow
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="4dp"
				android:gravity="center">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="48dp"
					android:layout_marginRight="4dp"
					android:gravity="center_vertical|right"
					android:text="@string/login_prompt" />

				<EditText
					android:id="@+id/identityField"
					android:layout_width="144dp"
					android:layout_height="48dp"
					android:layout_marginLeft="4dp"
					android:layout_marginRight="4dp"
					android:gravity="center_vertical"
					android:inputType="text" />

				<TextView
					android:id="@+id/registerLink"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical|left"
					android:layout_marginEnd="8dp"
					android:layout_marginStart="8dp"
					android:clickable="true"
					android:linksClickable="false"
					android:text="@string/register_text"
					android:textColor="@android:color/holo_blue_light" />

			</TableRow>

			<TableRow
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="4dp"
				android:layout_marginTop="4dp"
				android:gravity="center">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="48dp"
					android:layout_marginRight="4dp"
					android:gravity="center_vertical|right"
					android:text="@string/password_prompt" />

				<EditText
					android:id="@+id/passwordField"
					android:layout_width="144dp"
					android:layout_height="48dp"
					android:layout_marginLeft="4dp"
					android:layout_marginRight="4dp"
					android:gravity="center_vertical"
					android:inputType="textPassword" />

				<TextView
					android:id="@+id/restoreLink"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical|left"
					android:layout_marginEnd="8dp"
					android:layout_marginStart="8dp"
					android:clickable="true"
					android:text="@string/restore_link"
					android:textColor="@android:color/holo_blue_light" /><![CDATA[

				/>
			]]>
			</TableRow>
		</TableLayout>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginTop="10dp"
			android:orientation="vertical">

			<CheckBox
				android:id="@+id/rememberLoginBox"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginBottom="10dp"
				android:layout_marginTop="10dp"
				android:text="@string/remember_login_text" />


			<Button
				android:id="@+id/bkndlsLoginButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginTop="25dp"
				android:text="@string/btn_LoginBackendless" />

			<Button
				android:id="@+id/loginTwitterButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginTop="5dp"
				android:background="@drawable/btn_twitter_bg"
				android:paddingEnd="5dp"
				android:paddingStart="30dp"
				android:text="Login with twitter" />

			<com.facebook.login.widget.LoginButton
				android:id="@+id/button_FacebookLogin"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerInParent="true"
				android:layout_gravity="center_horizontal"
				android:layout_marginTop="5dp"
				android:text="  connect_with_facebook" />


		</LinearLayout>


	</LinearLayout>
</RelativeLayout>
        